--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/crudusers?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/material?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Openclass088.
 spring.jpa.hibernate.ddl-auto=update
